[package]
name = "distlock"
version = "0.1.0"
edition = "2021"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
http = "1.1.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full", "macros"] }
