[package]
name = "distlock"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
chrono = "0.4.38"
http = "1.1.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
rsa = { version = "0.9.6", features = ["sha2"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full", "macros"] }
